# claude-agent-sdk-implementation

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
Backend/: .env.example  Dockerfile  debug_agent.py  docker-compose.yml  pyproject.toml
Backend/.claude/skills/claude-agent-sdk/: SKILL.md
Backend/.claude/skills/claude-agent-sdk/references/: custom-tools.md  hooks.md  mcp-integration.md  quick-start.md  sessions-permissions.md  streaming.md  structured-outputs.md  system-prompt.md  user-input.md
Backend/.claude/skills/excel-qa/: SKILL.md
Backend/.claude/skills/excel-qa/references/: query-patterns.md
Backend/.claude/skills/excel-qa/scripts/: discover_schema.py
Backend/app/: agent.py  hooks.py  main.py
Backend/app/api/: api.py
Backend/app/api/endpoints/: agent.py  artifacts.py  auth.py  feedback.py  messages.py  sessions.py
Backend/app/core/: config.py  dependencies.py  log.py  security.py
Backend/app/db/: artifacts.py  connection.py  feedback.py  messages.py  sessions.py  users.py
Backend/app/schemas/: artifact.py  auth.py  feedback.py  message.py
Backend/app/static/: index.html
Frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/api/: auth.ts  feedback.ts  sessions.ts
Frontend/src/components/: ChatPanel.tsx  (+8 more)
app/: agent.py  main.py  session_store.py
app/core/: config.py
workspace/processed/: simple_presentation.pptx
workspace/sessions/: .json  b25f6d4a-fa29-4686-aabd-870294230ed3.json
(+8 files in other folders)
